--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "knowledge-base"]
 	path = knowledge-base
-	url = git@github.com:mericahero/KnowledgeBase.git
+	url = https://github.com/mericahero/MyKnowledgeBase.git
